# todo-baggins

./: .dockerignore  .env.dev  .gitignore  Cargo.toml  Dioxus.toml  diesel.toml  docker-compose-dev.yml  docker-compose-prod.yml  index.html  package-lock.json  package.json
.github/workflows/: conventional-commits.yml  conventional-pull-requests.yml  lint.yml
assets/: manifest.json
assets/styles/: .gitignore  fonts.css  input_number_arrows.css  input_range.css
docker/dev/app/: Dockerfile  entrypoint.sh  supervisord.conf
docker/prod/app/: Dockerfile
migrations/2024-08-16-221326_create_projects/: down.sql  up.sql
migrations/2024-08-19-105140_create_tasks/: down.sql  up.sql
migrations/2024-09-06-100207_add_created_updated_at_to_projects/: down.sql  up.sql
migrations/2024-09-06-155031_add_created_updated_at_to_tasks/: down.sql  up.sql
migrations/2024-09-08-083610_create_subtasks/: down.sql  up.sql
src/: main.rs
src/components/: app.rs  bottom_panel.rs  category_input.rs  create_task_button.rs  form_open_button.rs  form_project.rs  home.rs  layout.rs  mod.rs  navigation.rs  navigation_item.rs  project_form.rs  reoccurrence_input.rs  sticky_bottom.rs  subtasks_form.rs  task_form.rs  task_list.rs  task_list_item.rs
src/components/pages/: category_calendar_page.rs  category_done_page.rs  category_inbox_page.rs  category_long_term_page.rs  category_next_steps_page.rs  category_page.rs  category_someday_maybe_page.rs  category_today_page.rs  category_trash_page.rs  category_waiting_for_page.rs  mod.rs  (+2 more)
src/errors/: error.rs  error_vec.rs  mod.rs  project_create_error.rs  project_error.rs  subtask_error.rs  task_create_error.rs  task_error.rs
src/internationalization/: cs_cz.json  en_us.json  mod.rs
src/migrations/: mod.rs
src/models/: category.rs  mod.rs  project.rs  subtask.rs  task.rs
src/query/: mod.rs  projects.rs  subtasks.rs  tasks.rs
src/route/: mod.rs
src/schema/: mod.rs
src/server/: database_connection.rs  internationalization.rs  mod.rs  projects.rs  subtasks.rs  tasks.rs
src/styles/: tailwind.config.js  tailwind.css
src/utils/: mod.rs  reverse_ord_option.rs
(+1 files in other folders)
